# EulerOneBot

./: .gitignore  config.py  hyperogger.py  main.py  protocol.py  pyproject.toml  readme.md  requirements.txt  versions.py
.github/workflows/: pypi_upload.yaml
onebot/: __init__.py  api.py  api_data.py  connector.py  events.py  models.py  segments.py
protocol/: __init__.py
src/euleronebot/: hyperogger.py  protocol.py  versions.py
src/euleronebot/onebot/: __init__.py  api.py  api_data.py  connector.py
src/euleronebot/utils/: __init__.py  infomgr.py  transformer.py
utils/: infomgr.py  transformer.py
