[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "euler-onebot"
version = "0.0.2"
description = "A OneBot v11 implementation in Python, based on lagrange-python"
readme = "readme.md"
license = { text = "GPL-3.0" }
requires-python = ">=3.10"
authors = [
    { name = "HarcicYang" },
]
keywords = ["onebot", "qq", "lagrange"]
dependencies = [
    "pydantic",
    "pydantic-settings",
    "fastapi",
    "uvicorn[standard]",
    "httpx",
    "qrcode>=8.2",
    "cryptography>=49.0.0",
]

[tool.setuptools.packages.find]
where = ["src"]
include = ["euleronebot*"]
